fix: recolor purple dark mode

--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -84,10 +84,10 @@
       }
 
       &.active {
-        color: var(--purple);
+        color: var(--pink);
 
         svg path, svg circle {
-          stroke: var(--purple);
+          stroke: var(--pink);
         }
       }
 
