--- a/src/pages/NewRoom/styles.module.scss
+++ b/src/pages/NewRoom/styles.module.scss
@@ -3,6 +3,15 @@
   align-items: stretch;
   height: 100vh ;
 
+  @media (max-width: 768px) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (max-width: 425px) {
+   display: flex; 
+  }
+
   aside {
     flex: 7;
 
@@ -15,6 +24,10 @@
 
     padding: 7.5rem 5rem;
 
+
+    @media (max-width: 768px) {
+      padding: 1rem;
+    }
 
     > button {
       position: absolute;
