--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -34,7 +34,7 @@
   --content: #B8B8B8;
   --gray: #737380;
   --gray-light: #DBDCDD;
-  --purple: #7818c7;
+  --purple: #4b0082;
   --pink: #aa1bec;
   --red: #8a0e24;
   --red-google: #a81d10;
